--- a/sources/blocked.html
+++ b/sources/blocked.html
@@ -6,7 +6,23 @@
 </head>
 <body>
 <h1>Request blocked</h1>
-This site is not in the whitelist.
+<p>
+    Unable to access <a id="url"></a>.
+</p>
+<div id="blocked">
+    <p>
+        The domain <b id="domain"></b> is not whitelisted.
+    </p>
+    <p>
+        Consider to add it to the configuration if it is something you want to access.
+    </p>
+</div>
+<div id="notReady">
+    <p>
+        Extension is not ready yet. Please wait and retry.
+    </p>
+</div>
+<script src="blocked.js"></script>
 </body>
 </html>
 
