--- a/sources/blocked.html
+++ b/sources/blocked.html
@@ -16,6 +16,7 @@
     <p>
         Consider to add it to the configuration if it is something you want to access.
     </p>
+    <button id="options">Options</button>
 </div>
 <div id="notReady">
     <p>
